manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: my-82034609
spec:
    ports:
    - port: 8080 
    selector:
        app: "cloud-sample"
