manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "cloud-sample-ingress"
spec:
  ingressClassName: ingress-internal
  rules:
  - host: "82034609.cepg-aa.kubepia.net"
    http:
      paths:
      - path: /
        backend:
          service:
            name: cloud-sample
            port:
              number: 8080
        pathType: Prefix
